# mlops-zoomcamp-2024

./: .gitignore  pyproject.toml
01-intro/: homework.ipynb
02-experiment-tracking/homework/: hpo.py  preprocess_data.py  register_model.py  train.py
04-deployment/: Dockerfile  Pipfile
04-deployment/homework/: starter.ipynb  starter.py
05-monitoring/homework/: evidently_metrics_calculation.py
05-monitoring/homework/workspace/eb076cc2-d189-49f6-8a8c-9a61cdc13c1f/: metadata.json
05-monitoring/homework/workspace/eb076cc2-d189-49f6-8a8c-9a61cdc13c1f/snapshots/: 47efc932-aa1b-4696-b7cd-efe8653a69cd.json  4a6b4aa3-55d9-4d39-bcdf-c54db7775ef5.json
06-best-practices/homework/: .env.example  batch.py  integration_test.py
06-best-practices/homework/tests/: integration_test.py  test_batch.py
data/processed/05-monitoring/: reference.parquet
