[tool.poetry]
name = "mlops-zoomcamp-2024"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Łukasz Kopociński <lkopocinski@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"