[tool.poetry]
name = "mlops-zoomcamp-2024"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Łukasz Kopociński <lkopocinski@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
pyarrow = "<16"
scikit-learn = "^1.4.2"
hyperopt = "^0.2.7"


[tool.poetry.group.dev.dependencies]
mlflow = "^2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"